--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-echo "<!DOCTYPE html><html><head><title>My Portfolio</title></head><body><h1>Hello from Naji Mousa!</h1></body></html>" > index.html
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>إسمك - مطور فلسطيني</title>
+    <!-- الخطوط -->
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+    <!-- أيقونات -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        /* CSS سيأتي هنا */
+    </style>
+</head>
+<body>
+    <!-- شريط التنقل -->
+    <nav>
+        <div class="container">
+            <h1 class="logo">إسمك</h1>
+            <ul>
+                <li><a href="#home">الرئيسية</a></li>
+                <li><a href="#projects">المشاريع</a></li>
+                <li><a href="#contact">تواصل</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- قسم Hero -->
+    <section id="home" class="hero">
+        <div class="container">
+            <h1>مرحبًا، أنا <span>مطور فلسطيني</span></h1>
+            <p>أبني حلولًا تقنية تعبر عن هويتي.</p>
+            <img src="palestine-map.png" alt="خريطة فلسطين" class="map-image">
+        </div>
+    </section>
+
+    <!-- المشاريع -->
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2>مشاريعي</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <h3>موقع فلسطين التحرير</h3>
+                    <p>موقع يعرض تاريخ فلسطين بالنصوص والخرائط التفاعلية.</p>
+                </div>
+                <!-- المزيد من البطاقات -->
+            </div>
+        </div>
+    </section>
+
+    <!-- تواصل -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>تواصل معي</h2>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fas fa-envelope"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <script src="js/main.js"></script>
+</body>
+</html>
